--- a/Pix2Struct.ipynb
+++ b/Pix2Struct.ipynb
@@ -163,6 +163,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce220b59",
+   "metadata": {},
+   "source": [
+    "#### MSN Screen Shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8aeb6c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Caption:\n",
+      " screen shows about a news app\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from pathlib import Path\n",
+    "from transformers import AutoProcessor, Pix2StructForConditionalGeneration\n",
+    "from IPython.display import display\n",
+    "\n",
+    "\n",
+    "# --- Parameters (edit these directly in the notebook) ---\n",
+    "model_id = \"google/pix2struct-screen2words-base\"\n",
+    "image_path = Path(r\"C:\\Users\\PuttarajuS\\MSN.png\")   # Replace with your image file path\n",
+    "prompt_text = \"Please help us describing the details in the screen shot\"  # You can change this prompt\n",
+    "\n",
+    "# --- Load model & processor ---\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = Pix2StructForConditionalGeneration.from_pretrained(model_id)\n",
+    "\n",
+    "# Ensure model runs on CPU\n",
+    "model.eval()\n",
+    "torch.set_grad_enabled(False)\n",
+    "\n",
+    "# --- Load and preprocess image ---\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "inputs = processor(images=image, text=prompt_text, return_tensors=\"pt\")\n",
+    "\n",
+    "# --- Generate output ---\n",
+    "outputs = model.generate(**inputs, max_new_tokens=64)\n",
+    "caption = processor.batch_decode(outputs, skip_special_tokens=True)[0]\n",
+    "\n",
+    "print(\"\\nCaption:\\n\", caption.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b743c00",
    "metadata": {},
    "source": [
@@ -173,6 +229,56 @@
     "Talking point: Use the DocVQA checkpoint rather than the generic base; Pix2Struct has multiple task-specific fine-tunes.\n",
     "\n",
     "Great for “What’s the invoice total?”, “Who is the payee?”, “What is the chapter title?” etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a5a73a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Q: On the right hand side there are some scores, please describe the details of the scores\n",
+      "A: Costco Is Expanding This Month-See If Your City Made the List\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, Pix2StructForConditionalGeneration\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Task-specific DocVQA checkpoint\n",
+    "model_id = \"google/pix2struct-docvqa-base\"\n",
+    "\n",
+    "# ✅ Set your inputs here\n",
+    "image_path = Path(r\"C:\\Users\\PuttarajuS\\MSN.png\")  # adjust path\n",
+    "question   = \"On the right hand side there are some scores, please describe the details of the scores\"\n",
+    "\n",
+    "# Load processor and model\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = Pix2StructForConditionalGeneration.from_pretrained(model_id)\n",
+    "\n",
+    "model.eval()\n",
+    "torch.set_grad_enabled(False)\n",
+    "\n",
+    "# Open and prepare image\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "# Pix2Struct renders the question onto the image internally\n",
+    "inputs = processor(images=image, text=question, return_tensors=\"pt\")\n",
+    "\n",
+    "# Generate answer\n",
+    "generated_ids = model.generate(**inputs, max_new_tokens=64)\n",
+    "answer = processor.batch_decode(generated_ids, skip_special_tokens=True)[0]\n",
+    "\n",
+    "# Show Q & A\n",
+    "print(f\"\\nQ: {question}\\nA: {answer.strip()}\")"
    ]
   },
   {
